// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render tabs component correctly 1`] = `
<div>
  <div
    class="sc-eNQAEJ guTlYH"
  >
    <div
      class="sc-hMqMXs hWoVyc"
    >
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU tab__button--active ezYedQ"
          data-index="0"
        >
          <div
            class="text text--primary sc-chPdSV fNqmYG"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU ezYedQ"
          data-index="1"
        >
          <div
            class="text text--primary sc-chPdSV fNqmYG"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU ezYedQ"
          data-index="2"
        >
          <div
            class="text text--primary sc-chPdSV fNqmYG"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly with props for text of tabs 1`] = `
<div>
  <div
    class="sc-eNQAEJ guTlYH"
  >
    <div
      class="sc-hMqMXs hWoVyc"
    >
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU tab__button--active ezYedQ"
          data-index="0"
        >
          <div
            class="text text--accent text--alert text--primary sc-chPdSV gAxGRA"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU ezYedQ"
          data-index="1"
        >
          <div
            class="text text--accent text--alert text--primary sc-chPdSV gAxGRA"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-kEYyzF cOOGXq"
      >
        <div
          class="sc-kkGfuU ezYedQ"
          data-index="2"
        >
          <div
            class="text text--accent text--alert text--primary sc-chPdSV gAxGRA"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
